cmake_minimum_required(VERSION 2.8)
find_package(CUDA)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB hdr *.hpp *.h *.cpp)
file(GLOB cu *.cu)
SET(stereo_match_files stereo_match.cpp)
CUDA_ADD_EXECUTABLE(stereo_match ${stereo_match_files})
target_link_libraries(stereo_match ${OpenCV_LIBS})