cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)
find_package(CUDA)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
file(GLOB hdr *.hpp *.h *.cpp)
file(GLOB cu *.cu)
SET(point_cloud_gpu_files point_cloud_gpu.cpp)
CUDA_ADD_EXECUTABLE(point_cloud_gpu ${point_cloud_gpu_files})
target_link_libraries(point_cloud_gpu ${OpenCV_LIBS})
